--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -15,7 +15,7 @@ jobs:
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -65,10 +65,10 @@ jobs:
         run: |
           aws glue update-job \
             --job-name data_transformation_job.py \
-            --job-update "{\"Command\":{\"ScriptLocation\":\"s3://${{ secrets.S3_BUCKET_NAME }}/scripts/data_transformation_job.py\"}}"
+            --job-update "{\"Command\":{\"Name\":\"glueetl\",\"ScriptLocation\":\"s3://${{ secrets.S3_BUCKET_NAME }}/scripts/data_transformation_job.py\"}}"
 
       - name: Update Glue Data Joining Job
         run: |
           aws glue update-job \
             --job-name data_joining_job.py \
-            --job-update "{\"Command\":{\"ScriptLocation\":\"s3://${{ secrets.S3_BUCKET_NAME }}/scripts/data_joining_job.py\"}}"
+            --job-update "{\"Command\":{\"Name\":\"glueetl\",\"ScriptLocation\":\"s3://${{ secrets.S3_BUCKET_NAME }}/scripts/data_joining_job.py\"}}"
